Correctly spacing treeview items

--- a/frontend/src/app/_protected/pages/tools/hyper-ide/ide-tree/ide-tree.component.scss
+++ b/frontend/src/app/_protected/pages/tools/hyper-ide/ide-tree/ide-tree.component.scss
@@ -67,13 +67,13 @@
     }
   }
 
-  .file-node {
+  .mat-tree-node.file-node {
     button:first-child {
-      padding-left: 30px !important;
+      margin-left: 28px !important;
     }
   }
   .mat-tree-node {
-    min-height: 38px;
+    min-height: 28px;
     width: 100%;
     position: relative;
     overflow: visible;
